# VDeskManager

./: .gitignore  CHANGELOG.md  LICENSE  README.md  VDeskManager.spec  build.bat  main.py  pyproject.toml  quick-start.bat  requirements.txt  start.bat
.github/workflows/: release.yml
src/: __init__.py  autostart.py  config_export.py  desktop_manager.py  desktop_sets.py  hotkey_manager.py  icon_generator.py  monitor_manager.py  name_manager.py  switch_animation.py  tray_icon.py  version.py  win_autoroute.py
tests/: __init__.py  conftest.py  test_hotkey_manager.py  test_icon_generator.py  test_switch_animation.py  test_version.py
